# MagicblockSample

./: README.md
frontend-game/: package-lock.json  package.json
frontend-game/app/: layout.tsx  page.tsx
frontend-game/components/: GameComponent.tsx  WalletProvider.tsx
frontend-game/lib/: apply_velocity.ts  game.ts  movement.ts  position.ts  velocity.ts
game/: Anchor.toml  package.json
game/programs-ecs/components/position/src/: lib.rs
game/programs-ecs/components/velocity/: Cargo.toml
game/programs-ecs/components/velocity/src/: lib.rs
game/programs-ecs/systems/apply-velocity/: Cargo.toml
game/programs-ecs/systems/apply-velocity/src/: lib.rs
game/programs-ecs/systems/movement/: Cargo.toml
game/programs-ecs/systems/movement/src/: lib.rs
game/programs/game/: Cargo.toml
game/programs/game/src/: lib.rs
game/tests/: game.ts
