[package]
name = "apply-velocity"
version = "0.2.3"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "apply_velocity"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
position = { version = "0.2.3", path = "../../components/position", features = [
    "cpi",
] }
velocity = { version = "0.2.3", path = "../../components/velocity", features = [
    "cpi",
] }
serde = { version = "1.0", features = ["derive"] }
